--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "dotenv -e .env node app.js",
+    "dev": "dotenv -e .env nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1"
   },
